# multi-agent

./: .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  interview.md  start.sh
.github/workflows/: ci-cd.yml  llm-service-ci.yml  performance.yml  release.yml  security.yml
config/: multi-agent.yaml  redis.conf
config/prometheus/: prometheus.yml
deploy/kubernetes/: multi-agent.yaml
docker/: frontend.dockerfile  go-service.dockerfile  python.dockerfile  rust.dockerfile
docs/: Multi-agent.md  PLATFORM_SUMMARY.md  SHANNON-PLATFORM-ARCHITECTURE.md  agent-core-api.md  agent-core-architecture.md  authentication-and-multitenancy.md  centralized-pricing.md  environment-configuration.md  frontend-development-guide.md  kubernetes-deployment.md  mcp-integration.md  multi-agent-workflow-architecture.md  p2p-coordination.md  pattern-usage-guide.md  phase-2-plan.md  python-code-execution.md  python-wasi-setup.md  rocky-linux-quickstart.md  streaming-api.md  streaming-demo.html  testing.md  ubuntu-quickstart.md  web-search-configuration.md  workflow-pricing-coverage.md
docs/example-usecases/: wasi-code-execution.md
frontend/: .env.example  Dockerfile  TESTING_REPORT.md  jest.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  setupTests.ts  styles.css
go/api-gateway/: .env.example  Dockerfile  go.mod  go.sum  main.go
go/config-service/: README.md  go.mod
go/orchestrator/: Dockerfile  go.mod  go.sum
go/security-service/: go.mod  go.sum  main.go
go/service-registry/: handlers.go  registry.go
policies/: multiagent.rego
proto/: agent.proto  llm.proto  orchestrator.proto
rust/agent-core/: Cargo.toml  Dockerfile  build.rs
rust/agent-core/proto/: agent_core.proto  health.proto
rust/agent-core/src/: config.rs  enforcement.rs  execution.rs  fsm.rs  grpc.rs  main.rs  metrics.rs  sandbox.rs  security.rs
scripts/: build.sh  deploy-helm.sh  monitor-scale.sh  test.sh
(+124 files in other folders)
